Added Navbar to Index.html

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ ul li {
 </head>
 <body>
 
+  <ul>
+    <li><a href="#style.css">Style Code Page (Nothing's Here)</a></li>
+    <li><a href="#README.md">README Page (Empty)</a></li>
+  </ul>
+  
+
 <h1>Games I Play Religiously</h1>
 
 <ol>
